# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
td/: .env  .env.test  pyproject.toml  tasks.py
td/data/: __init__.py  scores.csv
td/dokumentaatio/: arkkitehtuurikuvaus.md  hajatelmia.txt  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
td/src/: cells.py  config.py  enemy.py  gameloop.py  global_values.py  index.py  level.py  load_image.py  name_validation.py  renderer.py  score_keeper.py  tower_values.py  user_input.py  wave.py
td/src/data/: scores.csv
td/src/entities/: cells.py  level.py  menu.py
td/src/pf/: astar.py  cell.py  pathfinding.py  priorityqueue.py
td/src/repositories/: name_validation.py  score_repository.py
td/src/services/: clock.py  gameloop.py  load_image.py  renderer.py  user_input.py
td/src/sprites/: base.py  button.py  enemy.py  highlight.py  projectile.py  tower.py
td/src/tests/: astar_test.py  button_test.py  cells_test.py  enemy_test.py  name_validation_test.py  pathfinding_test.py  projectile_test.py  score_repository_test.py  tower_test.py
td/src/ui/: button_functions.py  highscore.py  menu.py  notifications.py  textinput.py
