[tool.poetry]
name = "ot-td"
version = "0.1.0"
description = ""
authors = ["Sampo Hakola <sampo.hakola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
