[tool.poetry]
name = "ot-td"
version = "0.1.0"
description = ""
authors = ["Sampo Hakola <sampo.hakola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
invoke = "^1.6.0"
pygame-textinput = "^1.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.11.1"
autopep8 = "^1.6.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
